# DL-lab1

./: .gitignore  README.md  custom_cnn.ipynb  custom_cnn_improved.ipynb  custom_cnns.ipynb  pretrained_cnns.ipynb  pyproject.toml  utils.py
