[project]
name = "DL"
version = "0.1.0"
description = "UDC DL Theory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "jax<0.5.0",
    "keras>=3.8.0",
    "matplotlib>=3.10.0",
    "pydot>=3.0.4",
    "pydotplus>=2.0.2",
    "robobopy>=1.4.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "tensorflow-datasets>=4.9.7",
    "tensorflow[and-cuda]>=2.18.0",
    "visualkeras>=0.1.4",
]
